# tangos

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  bluewaters.md  docker-compose.yml  environment.csh  environment.sh  live_calculation.md  pyproject.toml  setup.cfg  setup.py  troubleshooting.md  tutorial.md  webserver.sh
docs/: Data exploration with python.ipynb  advanced.md  black_holes_and_crossmatching.md  custom_input_handlers.md  custom_output_handlers.md  custom_properties.md  data_exploration.md  data_exploration_webserver.md  first_steps.md  first_steps_changa+ahf.md  first_steps_eagle.md  first_steps_gadget+AHF.md  first_steps_gadget+rockstar.md  first_steps_gadget+subfind.md  first_steps_ramses+hop.md  histogram_properties.md  index.md  live_calculation.md  mpi.md  old.md  rdbms.md  tracking.md  using_with_yt.md
michaels_properties/: __init__.py  flows.py  profiles.py  sfhistory.py
modules/: localset.py  sim_output_finder.py  terminalcontroller.py
mpi_tests/: README.md  test_mpi.py  test_numpy_mpi.py
properties/: BH.py  __init__.py  basic.py  disk_dynamics.py  dust.py  dynamics.py  flows.py  intrinsic.py  isolated.py  potential.py  profile.py  sfr.py  shape.py  spherical_region.py  subhalo.py
tangos/: __init__.py  blocking.py  cached_writer.py  config.py  log.py  query.py  temporary_halolist.py  testing.py  tracker.py  tracking.py
tangos_nbodyshop_properties/: BH.py  __init__.py  basic.py  disk_dynamics.py  dynamics.py  flows.py  images.py  isolated.py  potential.py  profile.py  sfr.py  shape.py  subhalo.py
test_tutorial_build/: build.sh
tests/: test_ahf_trees.py  test_argmax.py  test_bh_reader.py  test_bh_specialisms.py  test_big_integer_halos.py  test_big_mergertree.py  test_blocking_session.py  test_check_deleted.py  test_consistent_collection.py  test_consistent_trees.py  test_crosslink.py  test_data_attribute_mapper.py  test_db_writer.py  test_dict_caching.py  test_difficult_merger_scenario.py  test_halo_setitem.py  test_histogram_property.py  test_hop_strategy.py  test_import.py  test_import_dependencies.py  test_linking.py  test_live_calculation.py  test_live_calculation_link_syntax.py  test_merger_tree.py  test_object_specialisms.py  test_stat_files.py  (+17 more)
(+426 files in other folders)
