[metadata]
name = tangos
version = 1.6.0
description = TANGOS, the agile numerical galaxy organisation system
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrew Pontzen
author_email = a.pontzen@ucl.ac.uk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    PasteDeploy>=1.5.0
    WebOb>=1.7.0rc2
    hupper
    more-itertools>=8.0.0
    numpy>=1.10.0
    plaster
    plaster-pastedeploy
    pyparsing>=2.1.0
    pyramid
    pyramid-debugtoolbar
    pyramid-jinja2
    pyramid-retry
    pyramid-tm
    repoze.lru>=0.4
    scipy>=0.14.0
    setuptools
    sqlalchemy>=1.4.0
    translationstring>=0.4
    venusian>=1.0a3
    waitress
    zope.deprecation>=3.5.0
    zope.interface>=3.8.0
    zope.sqlalchemy
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    tangos_add_bh = tangos.scripts.add_bh:main
    tangos_bh_timelink = tangos.scripts.bh_timelink:main
    tangos_crosslink = tangos.scripts.crosslink:main
    tangos_fix_bh_hosts = tangos.scripts.fix_bh_hosts:main
    tangos_import_from_ahf = tangos.scripts.import_from_ahf:main
    tangos_manager = tangos.scripts.manager:main
    tangos_preprocess_bh = tangos.scripts.preprocess_bh:main
    tangos_timelink = tangos.scripts.timelink:main
    tangos_writer = tangos.scripts.writer:main
    tangos = tangos.scripts:main
paste.app_factory = main = tangos.web:main

[options.extras_require]
full =
    pynbody>=0.46
    yt>=3.4.0
tests =
    PyMySQL[rsa]>=1.0.2
    pyquery>=1.3.0
    pytest>=5.0.0
    webtest>=2.0
